--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "publish-docs": "npm run build && rmdir /S /Q docs && mkdir docs && xcopy /E /Y dist\\public\\* docs\\"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
