--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "three": "^0.170.0",
     "vaul": "^1.1.0",
     "vite-plugin-glsl": "^1.3.1",
+    "web-vitals": "^4.2.4",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
@@ -119,6 +120,7 @@
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.36.0",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.14"
